--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,8 +8,8 @@
 
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-            <li class="nav-item active"><a href="#" class="nav-link">Recipes</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Shopping list</a></li>
+            <li class="nav-item active"><a href="#" class="nav-link" (click)="onSelect('recipes')">Recipes</a></li>
+            <li class="nav-item"><a href="#" class="nav-link" (click)="onSelect('shopping-list')">Shopping list</a></li>
         </ul>
 
         <ul class="nav navbar-nav ml-auto">
