--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,12 +1,12 @@
 <div class="row">
   <div class="col-sm-12">
-    <img src="" alt="">
+    <img [src]= "recipe.imagePath" alt="">
   </div>
 </div>
 
 <div class="row">
   <div class="col-sm-12">
-    <h1>Recipe Name</h1>
+    <h1> {{ recipe.name }}</h1>
   </div>
 </div>
 
@@ -25,7 +25,7 @@
 
 <div class="row">
   <div class="col-sm-12">
-    <div>Description</div>
+    <div>{{ recipe.description }}</div>
   </div>
 </div>
 
