--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,11 +13,11 @@
         </ul>
 
         <ul class="nav navbar-nav ml-auto">
-            <li class="nav-item dropdown">
-                <a href="#" class="nav-link dropdown-toggle" role="navigation">Manage <span class="caret"></span></a>
+            <li class="nav-item dropdown" appDropdown>
+                <a href="#" class="nav-link dropdown-toggle" role="navigation" >Manage <span class="caret"></span></a>
                 <div class="dropdown-menu">
-                    <a href="#" class="dropdown-link">Save Data</a>
-                    <a href="#" class="dropdown-link">Fetch Data</a>
+                    <a href="#" class="dropdown-item">Save Data</a>
+                    <a href="#" class="dropdown-item">Fetch Data</a>
                 </div>
             </li>
         </ul>
