--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -12,12 +12,12 @@
 
 <div class="row">
   <div class="col-sm-12">
-    <div class="btn group">
+    <div class="btn group" appDropdown>
       <button class="btn btn-primary dropdown-toggle">Manage Recipe</button>
       <ul class="dropdown-menu">
-        <li><a href="">To shopping list</a></li>
-        <li><a href="">Edit recipe</a></li>
-        <li><a href="">Delete recipe</a></li>
+        <li><a class="dropdown-item" (click)="onAddToShoppingList()">To shopping list</a></li>
+        <li><a href="" class="dropdown-item">Edit recipe</a></li>
+        <li><a href="" class="dropdown-item">Delete recipe</a></li>
       </ul>
     </div>
   </div>
@@ -31,6 +31,11 @@
 
 <div class="row">
   <div class="col-sm-12">
-    <div>Ingredients</div>
+    <ul class="list-group">
+      <li class="list-group-item"
+      *ngFor="let ingredient of recipe.ingredients">
+        {{ ingredient.name }} - {{ ingredient.amount }}
+      </li>
+    </ul>
   </div>
 </div>
