--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,20 +4,20 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-    <a href="#" class="navbar-brand">Recipe book</a>
+    <a routerLink="/" class="navbar-brand">Recipe book</a>
 
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-            <li class="nav-item active"><a href="#" class="nav-link" (click)="onSelect('recipes')">Recipes</a></li>
-            <li class="nav-item"><a href="#" class="nav-link" (click)="onSelect('shopping-list')">Shopping list</a></li>
+            <li class="nav-item" routerLinkActive="active"><a routerLink="/recipes" class="nav-link">Recipes</a></li>
+            <li class="nav-item" routerLinkActive="active"><a routerLink="/shopping-list" class="nav-link">Shopping list</a></li>
         </ul>
 
         <ul class="nav navbar-nav ml-auto">
             <li class="nav-item dropdown" appDropdown>
-                <a href="#" class="nav-link dropdown-toggle" role="navigation" >Manage <span class="caret"></span></a>
+                <a class="nav-link dropdown-toggle" role="navigation" style="cursor: pointer;">Manage <span class="caret"></span></a>
                 <div class="dropdown-menu">
-                    <a href="#" class="dropdown-item">Save Data</a>
-                    <a href="#" class="dropdown-item">Fetch Data</a>
+                    <a class="dropdown-item" style="cursor: pointer;">Save Data</a>
+                    <a class="dropdown-item" style="cursor: pointer;">Fetch Data</a>
                 </div>
             </li>
         </ul>
