--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -16,8 +16,8 @@
       <button class="btn btn-primary dropdown-toggle">Manage Recipe</button>
       <ul class="dropdown-menu">
         <li><a class="dropdown-item" (click)="onAddToShoppingList()">To shopping list</a></li>
-        <li><a href="" class="dropdown-item">Edit recipe</a></li>
-        <li><a href="" class="dropdown-item">Delete recipe</a></li>
+        <li><a class="dropdown-item" style="cursor: pointer;" (click)="onEditRecipe()">Edit recipe</a></li>
+        <li><a class="dropdown-item" style="cursor: pointer;" (click)="onDeleteRecipe()">Delete recipe</a></li>
       </ul>
     </div>
   </div>
